Added cheerio module for html editing through node js.

--- a/src/package.json
+++ b/src/package.json
@@ -17,6 +17,7 @@
   },
   "homepage": "https://github.com/Underdisc/underdisc.github.io#readme",
   "dependencies": {
+    "cheerio": "^1.0.0-rc.3",
     "showdown": "^1.9.1"
   }
 }
