--- a/src/package.json
+++ b/src/package.json
@@ -18,6 +18,7 @@
   "homepage": "https://github.com/Underdisc/underdisc.github.io#readme",
   "dependencies": {
     "cheerio": "^1.0.0-rc.3",
+    "highlight.js": "^10.1.2",
     "showdown": "^1.9.1"
   }
 }
