Removed showdown-highlight as a dependency since it does not allow for ignoring illegal matches.

--- a/src/package.json
+++ b/src/package.json
@@ -19,7 +19,6 @@
   "dependencies": {
     "cheerio": "^1.0.0-rc.3",
     "highlight.js": "^10.1.2",
-    "showdown": "^1.9.1",
-    "showdown-highlight": "^2.1.4"
+    "showdown": "^1.9.1"
   }
 }
